--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.wrap{
+    width: 500px;
+    height: 200px;
+    background: gray;
+    display: flex;
+    justify-content: flex-start;
+    border-radius: 15px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.avatar{
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    padding: 20px;
+}
+img{
+    border-radius: 50%;
+}
+.bio{
+    padding-left: 10px;
+}
+p{
+    font-size: 18px;
+    color: white;
+    text-transform: capitalize;
+}
+.bold-name{
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 24px;
 }
